Bug 440595.  Report the right line number in the onerror handler even if not reporting the whole error.  r=jonas, sr=jst